# GafferSnapshotClone

./: .gitignore  CMakeLists.txt  README.md
Debug/: GafferSnapshotClone
include/: BitOperationsCommon.h  BitReader.h  BitWriter.h  CompressedTransform.h  Quaternion.h  ReadStream.h  Snapshot.h  Transform.h  Vec3f.h  WriteStream.h
src/: BitReader.cpp  BitWriter.cpp  CompressedTransform.cpp  Quaternion.cpp  ReadStream.cpp  Snapshot.cpp  Transform.cpp  Vec3f.cpp  WriteStream.cpp  main.cpp
tests/: BitWriterTest.cpp  QuaternionTest.cpp  Vec3fTest.cpp
